Updated the setup/install instructions.

--- a/.EXAMPLE.env
+++ b/.EXAMPLE.env
@@ -1,3 +1,6 @@
-SENDGRID_USERNAME=your-sendgrid-username
-SENDGRID_PASSWORD=your-sendgrid-password
+SENDGRID_USERNAME=sendgrid-username
+SENDGRID_PASSWORD=sendgrid-password
+MYSQL_HOST=127.0.0.1
+MYSQL_USER=mysql-user
+MYSQL_DB=db-name
 MYSQL_PASSWORD=your-mysql-password
