Add a Google Glass teleprompter

--- a/.EXAMPLE.env
+++ b/.EXAMPLE.env
@@ -4,3 +4,6 @@ MYSQL_HOST=127.0.0.1
 MYSQL_USER=mysql-user
 MYSQL_DB=db-name
 MYSQL_PASSWORD=your-mysql-password
+GLASS_CLIENT_ID=your-client-id
+GLASS_SECRET=your-secret
+GLASS_CALLBACK=your-callback
