--- a/.EXAMPLE.env
+++ b/.EXAMPLE.env
@@ -1,9 +1,8 @@
-SENDGRID_USERNAME=sendgrid-username
-SENDGRID_PASSWORD=sendgrid-password
+SENDGRID_APIKEY=sendgrid_api_key
 MYSQL_HOST=127.0.0.1
-MYSQL_USER=mysql-user
-MYSQL_DB=db-name
-MYSQL_PASSWORD=your-mysql-password
-GLASS_CLIENT_ID=your-client-id
-GLASS_SECRET=your-secret
-GLASS_CALLBACK=your-callback
+MYSQL_USER=mysql_username
+MYSQL_DB=mysql_db_name
+MYSQL_PASSWORD=mysql_password
+GLASS_CLIENT_ID=google_glass_client_id
+GLASS_SECRET=google_glass_secret
+GLASS_CALLBACK=google_glass_callback
